# axum_crud

./: .env  Cargo.toml  README.md  create_table.sql
src/: main.rs
