[package]
name = "axum_crud"
version = "0.1.0"
edition = "2021"

[dependencies]
#axum
axum = "0.8.1"
tokio = { version = "1.43.0", features = ["full"] }

#postgres
sqlx = {version = "0.8.3", features = ["runtime-tokio", "tls-native-tls", "postgres", "macros"]}

#serde
serde = { version = "1.0.217", features = ["derive"] }
serde_json = {version = "1.0.138"}

#env
dotenvy = "0.15.7"